config/maxgio.me/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: maxgio-prod
  labels:
    app: maxgio-prod
