config/maxgio.me/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: maxgio-prod
  labels:
    app: ghost
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
        - name: ghost
          image: ghost:latest
          ports:
            - containerPort: 2368
          volumeMounts:
            - mountPath: /var/lib/ghost/content
              name: ghost-content
      volumes:
        - name: ghost-content
          persistentVolumeClaim:
            claimName: ghost-content
