config/maxgio.me/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: hello
  namespace: maxgio-prod
  labels:
    app: hello
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: hello
  type: ClusterIP
