config/maxgio.me/ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ghost
  namespace: maxgio-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/ssl-redirect: 'true' 
spec:
  tls:
    - hosts:
      - www.maxgio.me
      secretName: www.maxgio.me 
  rules:
    - host: www.maxgio.me
      http:
        paths:
          - backend:
              serviceName: ghost
              servicePort: 80
